Add padding and margins to comments

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,11 @@
 @import '~bootstrap/scss/bootstrap';
 
 .blog-snippet {
-  padding: 5%;
   margin: 5% 0;
+  padding: 5%;
+}
+
+.comment {
+  margin: 2% 0;
+  padding: 2%;
 }
